--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Chatbooks</title>
+    <title>Video For Count</title>
     <!--<link rel="stylesheet" href="style.css">-->
     <script src="songs.js"></script>
     <script src="index.js"></script>
