--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Video For Count</title>
     <!--<link rel="stylesheet" href="style.css">-->
+    <script src="config.js"></script>
     <script src="songs.js"></script>
     <script src="index.js"></script>
     
