add basics of normal audio and spotify support

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div>Current Count: <span id="count">--</span></div>
 
     <iframe id="ytiframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+ 
+    <iframe id="spotiframe" src="" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
     
+    <audio id="mp3Elem" src="" autoplay></audio>
+
   </body>
 </html>
